Button model now supported by IE10; fix for content wrapping in IE10

--- a/compiled/css/grid.css
+++ b/compiled/css/grid.css
@@ -283,6 +283,7 @@ body.grid--SPA {
   -moz-box-flex: 0 !important;
   -webkit-flex: 0 0 auto !important;
   -ms-flex: 0 0 auto !important;
+  -ms-preferred-size: auto !important;
   flex: 0 0 auto !important;
 }
 .g--shrink {
@@ -290,11 +291,13 @@ body.grid--SPA {
   -ms-flex-item-align: start;
   align-self: flex-start;
 }
-.g--wrap {
+.g--wrap,
+.g--wrap[class*="grid"] {
   -webkit-box-flex: 0 !important;
   -moz-box-flex: 0 !important;
   -webkit-flex: 0 0 auto !important;
   -ms-flex: 0 0 auto !important;
+  -ms-preferred-size: auto !important;
   flex: 0 0 auto !important;
   -webkit-align-self: flex-start;
   -ms-flex-item-align: start;
